added components requires routing

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,9 @@
 @import "~bootstrap/scss/bootstrap";
 
+body {
+    background-color: #3E3A3A;
+}
+
 .navbar-light .navbar-toggler-icon {
     background-image: url(./assets/Vector.png)
 }
